# Grand-Tide

./: .gitignore  CMakeLists.txt  README.md  fix.py  instructions.md  phase1_task_division.tex
assets/models/: 15211_Wakeboard_v1_NEW.mtl  Mera Mera No Mi.fbx  pl_mb_marine01_musk01.fbx
assets/models/Elgembellias/: Elgembellias.fbx  Elgembellias_1.fbx
assets/shaders/: aoe-fire.frag  aoe-indicator.frag  checkerboard.frag  color-mixer.frag  fire.frag  flames.frag  health-bar.frag  lit.frag  lit.vert  minimap.frag  procedural_sky.frag  procedural_sky.vert  shadow.frag  shadow.vert  shark.frag  texture-test.frag  textured.frag  toolbar.frag  transform-test.vert  triangle.vert  water.frag  water.vert
assets/shaders/postprocess/: chromatic-aberration.frag  vignette.frag
config/: app.jsonc  app.old.jsonc  kraken-phase.json  marines-phase.json  sharks-phase.json
config/mesh-test/: lit-test.jsonc
docs/: gameproposal.tex  opengl_requirements.tex  phase2_task_division.tex
octopus/wop-octopus-pirate-king-high-poly/source/: MON.mat  PiratesKing_01.mat
scripts/: build.bat  build.sh  build_and_run.sh  compare-all.sh  run-all.sh  run.bat  run.sh  test.bat  test.sh
source/: main.cpp
source/common/: application.cpp  asset-loader.cpp  gl-helpers.hpp  json-utils.hpp  loading-screen.hpp  pause-menu.hpp  phase-select-menu.hpp  start-menu.hpp
source/common/components/: animator.cpp  animator.hpp  burn-component.cpp  burn-component.hpp  camera.cpp  component-deserializer.hpp  elgembellias-component.cpp  elgembellias-component.hpp  enemy.cpp  enemy.hpp  fireball-component.cpp  fireball-component.hpp  health.cpp  health.hpp  inventory.cpp  inventory.hpp  light.cpp  light.hpp  marine-boat-component.hpp  mesh-renderer.cpp  movement.cpp  musket-component.cpp  musket-component.hpp  octopus-component.cpp  octopus-component.hpp  player-controller.cpp  player-controller.hpp  projectile-component.cpp  projectile-component.hpp  resource.cpp  resource.hpp  shark-component.cpp  shark-component.hpp
source/common/ecs/: entity.cpp  entity.hpp  event-manager.cpp  event-manager.hpp  shark.hpp  transform.cpp  world.cpp  world.hpp
source/common/input/: keyboard.hpp  mouse.hpp
source/common/material/: lit-material.cpp  lit-material.hpp  material.cpp  material.hpp  pipeline-state.hpp
source/common/mesh/: mesh.hpp  model.cpp  model.hpp  vertex.hpp
source/common/shader/: shader.cpp  shader.hpp
source/common/systems/: animation-system.cpp  animation-system.hpp  audio-player.hpp  boss-health-bar.cpp  boss-health-bar.hpp  combat-system.cpp  combat-system.hpp  damage-flash.cpp  damage-flash.hpp  elgembellias-system.hpp  fireball-system.hpp  forward-renderer.cpp  forward-renderer.hpp  game-ui.hpp  marine-boat-system.cpp  marine-boat-system.hpp  ocean-audio.hpp  octopus-system.cpp  octopus-system.hpp  player-controller-system.hpp  resource-spawner.hpp  shark-system.cpp  shark-system.hpp  survival-system.cpp  survival-system.hpp
source/common/texture/: sampler.hpp  texture-utils.cpp  texture2d.hpp
source/common/video/: video-player.cpp  video-player.hpp
source/states/: end-state.hpp  game-flow-controller.hpp  game-phase-manager.hpp  intro-state.hpp  kraken-state.hpp  marine-state.hpp  menu-state.hpp  play-state.hpp  sampler-test-state.hpp  shark-state.hpp  texture-test-state.hpp
